src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__DBSync_Id__c</fullName>
        <description>DBSync Username</description>
        <inlineHelpText>DBSync UserName</inlineHelpText>
        <label>DBSync Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__DBSync_Passwd__c</fullName>
        <description>DBSync Login Password</description>
        <inlineHelpText>DBSync Login Password</inlineHelpText>
        <label>DBSync Passwd</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__DBSync_Profile__c</fullName>
        <description>DBSync Profile Name</description>
        <inlineHelpText>DBSync Profile Name</inlineHelpText>
        <label>DBSync Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QBOE_Connection_Ticket__c</fullName>
        <defaultValue>&apos;V1-253-$n4Jb_vmujjJWx7f8gvS0Q:163331652&apos;</defaultValue>
        <description>QuickBooks Online Connection Ticket for DBSync</description>
        <inlineHelpText>QuickBooks Online Connection Ticket for DBSync</inlineHelpText>
        <label>QBOE Connection Ticket</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QBOE_DBSync_Server__c</fullName>
        <description>DBSync Server URL</description>
        <inlineHelpText>DBSync Server URL</inlineHelpText>
        <label>DBSync Server URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_SalesRep_ID__c</fullName>
        <label>QB SalesRep ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Initial__c</fullName>
        <label>QB Initial</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Username__c</fullName>
        <label>QB Username</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approvee__c</fullName>
        <label>Approvee</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>